<resources>
    <string name="app_name">Distance Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">Continue</string>
    <string name="permissions_text1">Welcome to distance Tracker. In order to use our application we will first need to request
    location permission from you. Otherwise we will not be able to provide you with our service.
        If you agree and wish to continue tap on button below.</string>
    <string name="permissions_text">Distance Tracker collects location data to  track current distance travelled by User and show this details as foreground notification even when the app is closed or not in use.</string>
    <string name="background_permission_rationale">Background location Permission is essential for this application  , using this current distance travelled by user is shown as foreground notification even when the app is closed or not in use.</string>
    <string name="location_permission_rationale">This application requires location permission without this core functionality of app, which is tracking cannot work without this </string>
    <string name="permissions_required">Permissions Required</string>
    <string name="tap_on_my_location_button">Tap on My location Button</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="_3">3</string>
    <string name="distance">Distance</string>
    <string name="share">OK</string>
    <string name="result">%1$s km</string>

</resources>